# nimble-ball-presentation

./: README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/nimble-ball-presentation/: audio.h  render.h
src/lib/: CMakeLists.txt  audio.c  render.c
